src/main/java/com/example/frota/errors/CnhJaExisteException.java
package com.example.frota.errors;

public class CnhJaExisteException extends RuntimeException {
    public CnhJaExisteException(String message) {
        super(message);
    }
}